# codi-time

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
crates/common/: Cargo.toml
crates/common/languages/: buildtools.languages.json  categories.json  configs.languages.json  languages.json  web.languages.json
crates/common/src/: database_helpers.rs  heartbeat.rs  language.rs  lib.rs  project.rs  query_params.rs  version_control_ref.rs
crates/common/src/user_types/: api_token.rs  bio.rs  group.rs  key_permissions.rs  mod.rs  preferences.rs  public_user.rs  report_intervals.rs
crates/entities/: Cargo.toml
crates/entities/src/: gravatar.rs  lib.rs
crates/entities/src/api_keys/: mod.rs  utils.rs
crates/entities/src/avatar/: mod.rs
crates/entities/src/connections/: mod.rs  pub_connection.rs
crates/entities/src/custom_languages/: categories.rs  languages.rs  mod.rs
crates/entities/src/heartbeats/: mod.rs
crates/entities/src/projects/: mod.rs  utils.rs
crates/entities/src/teams/: mod.rs  team_members.rs  utils.rs
crates/entities/src/users/: mod.rs  preferences.rs  pub_user.rs  utils.rs
crates/helper_macros/: Cargo.toml
crates/helper_macros/src/: lib.rs
crates/helper_macros/src/database_helpers/: mod.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20231204_154044_create_table.rs  main.rs  utils.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  http.ts  main.ts  types.ts
frontend/src/router/: index.ts
frontend/src/stores/: state.ts
frontend/src/views/: APIDocs.vue  HomeView.vue
src/: cli_access.rs  error.rs  main.rs  open_api.rs  recaptcha.rs  state.rs  tracing_setup.rs  utils.rs
src/config/: mod.rs
src/projects/: mod.rs
src/user/: api_keys.rs  cli.rs  middleware.rs  mod.rs  routes.rs  update_routes.rs
src/user/session/: dyn_session.rs  mod.rs
src/waka_time/: mod.rs
