[package]
name = "helper_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
heck = "0.5.0-rc.1"
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
