[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entities = { path = "../entities" }
sqlx = { workspace = true }
tokio = { version = "^1", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
[dependencies.sea-orm-migration]
version = "^0.12"
features = ["runtime-actix-rustls"]
